# food-finder

./: CMakeCache.txt  CMakeLists.txt  README.md  button.cpp  button.h  display.cpp  display.h  dropdown.cpp  dropdown.h  finder  main.cpp  recipe.h  recipeStorage.cpp  recipeStorage.h  testData.csv
dataInput/: readFile.h
frontend elements/: button.cpp  button.h  display.cpp  display.h  dropdown.cpp  dropdown.h  recipe.cpp  recipe.h
recipeStorage/: readFile.cpp  recipeStorage.cpp  recipeStorage.h
